--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ nav img {
   transform: translateX(-360%);
   color: black;
   text-decoration: none;
-  justify-content: space-around;
+  margin:1% 1% ;
 }
 .section {
   display: flex;
