--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,6 @@
-html{
-  overflow-x: hidden ;
-}
-
-
-
 body {
   overflow-x: hidden;
+  overflow-y: auto;
   margin: 0;
   padding: 0;
   height: 100%;
